--- a/JavaScript.html
+++ b/JavaScript.html
@@ -29,7 +29,7 @@
       <p class="flotte">
 			<img src="images/image-plustard.jpg" alt="" /> </p>
 						<h3><strong> Parmis eux on retrouve des jeux connus comme </strong></h3>
-						<p><a href="LeJeu.html"> Monsite </a></P>
+						<p><a href="LeJeu.html"> ma calculatrice en js </a></p>
 						
           <h4>
             
