Update avec nvs btns et pb de page réglé

--- a/Java.html
+++ b/Java.html
@@ -8,7 +8,8 @@
         
 	
 	<body>
-				<p><a href="index.html"> Index </a></P>
+				<a href="index.html" class="buttonlienindex" style="vertical-align:middle"><span>Index</span></a>
+      <br>
                 <h1> Le Java </h1>
 				<p class="flotte">
 			<img src="images/image-Java.jpeg" alt="" /> </p>
