--- a/LaCalculatrice.html
+++ b/LaCalculatrice.html
@@ -1,11 +1,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Jeu Matthieu</title>
+    <title>Ma calculatrice</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  <p><a href="JavaScript.html"> Le JavaScript </a></P>
+    <a href="JavaScript.html" class="buttonlienjs" style="vertical-align:middle"><span>Le Js</span></a>
+    <br>
     
   <p>
     <button class="button buttonaffiche" id="btnresult"></button>
