--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
         <head>
                 <meta charset="utf-8">
-                <title><strong>Les différences entre JAVA et JAVASCRIPT</strong></title>
+                <title>Les différences entre JAVA et JAVASCRIPT</title>
 		<link href="style.css" rel="stylesheet">
         </head>
         
@@ -17,7 +17,8 @@
 		<a href="Java.html" class="buttonlienjava" style="vertical-align:middle"><span>Le Java</span></a>
     <br>
 		<a href="JavaScript.html" class="buttonlienjs" style="vertical-align:middle"><span>Le Js</span></a>
-    <p><a href="LeJeu.html"> Ma Calculatrice en Js </a></p>
+    <br>
+    <a href="LaCalculatrice.html" class="buttonliencalc" style="vertical-align:middle"><span>Une Calculatrice en Js</span></a>
 		
 		<h3> Java permet de créer des applications qui sont exécutées sur une machine ou un navigateur virtuel tandis que le code JavaScript est exécuté uniquement sur un navigateur. Le code Java doit être compilé tandis que le code JavaScript est composé entièrement de texte. </h3>
 		
