--- a/LaCalculatrice.html
+++ b/LaCalculatrice.html
@@ -31,7 +31,7 @@
     <button class="button buttonnb" onclick="click(0)">0</button>
     <button class="button buttonautre" onclick="resultat(0)">Resultat</button>
   </p>
-  <script src="jeujs.js"></script>
+  <script src="calculatrice.js"></script>
 
 </body>
 </html>
