--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 		<a href="JavaScript.html" class="buttonlienjs" style="vertical-align:middle"><span>Le Js</span></a>
     <br>
     <a href="LaCalculatrice.html" class="buttonliencalc" style="vertical-align:middle"><span>Une Calculatrice en Js</span></a>
+    <br>
+    <a href="qrcode.html" class="buttonliencalc" style="vertical-align:middle"><span>QR code</span></a>
 		
 		<h3> Java permet de créer des applications qui sont exécutées sur une machine ou un navigateur virtuel tandis que le code JavaScript est exécuté uniquement sur un navigateur. Le code Java doit être compilé tandis que le code JavaScript est composé entièrement de texte. </h3>
 		
