--- a/LaCalculatrice.html
+++ b/LaCalculatrice.html
@@ -28,7 +28,7 @@
     <button class="button buttonautre" onclick="clickop(3)">+</button>
     <button class="button buttonautre" onclick="clickop(4)">-</button>
     <br>
-    <button class="button buttonnb" onclick="click(0)">0</button>
+    <button class="button buttonnb" onclick="clicknb(0)">0</button>
     <button class="button buttonautre" onclick="resultat(0)">Resultat</button>
   </p>
   <script src="calculatrice.js"></script>
