--- a/Java.html
+++ b/Java.html
@@ -8,8 +8,7 @@
         
 	
 	<body>
-				<a href="index.html" class="buttonlienindex" style="vertical-align:middle"><span>Index</span></a>
-      <br>
+				<p><a href="index.html"> Index </a></P>
                 <h1> Le Java </h1>
 				<p class="flotte">
 			<img src="images/image-Java.jpeg" alt="" /> </p>
