--- a/qrcode.html
+++ b/qrcode.html
@@ -7,7 +7,7 @@
 	<style>
 		/* Style pour le bouton */
 		.button {
-			background-color: #ffffff;
+			background-color: #000000;
 			border: none;
 			color: white;
 			padding: 10px 20px;
@@ -52,7 +52,7 @@
 	<h1>Générateur de code QR en JavaScript</h1>
 	<label class="button" for="saisie-donnees">Saisissez les données à inclure dans le code QR :</label>
 	<br>
-	<input class="button" type="text" id="saisie-donnees">
+	<input class="buttonlong" type="text" id="saisie-donnees">
 	<select class="buttonlong" id="select-taille">
 		<option class="buttona" value="128">128x128</option>
 		<option class="buttona" value="256" selected>256x256</option>
