--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
         <head>
                 <meta charset="utf-8">
-                <title>Les différences entre JAVA et JAVASCRIPT</title>
+                <title><strong>Les différences entre JAVA et JAVASCRIPT</strong></title>
 		<link href="style.css" rel="stylesheet">
         </head>
         
@@ -14,13 +14,8 @@
 			<img src="images/image-1.png" alt="" /> </p>
                 <p>Chaque page parlera d'un <strong>type</strong> de Java <strong>différent</strong></p>
 		<h2> Voici les différentes Pages </h2>
-		<a href="Java.html" class="buttonlienjava" style="vertical-align:middle"><span>Le Java</span></a>
-    <br>
-		<a href="JavaScript.html" class="buttonlienjs" style="vertical-align:middle"><span>Le Js</span></a>
-    <br>
-    <a href="LaCalculatrice.html" class="buttonliencalc" style="vertical-align:middle"><span>Une Calculatrice en Js</span></a>
-    <br>
-    <a href="qrcode.html" class="buttonliencalc" style="vertical-align:middle"><span>QR code</span></a>
+		<p><a href="Java.html"> Les Jeux Java </a></P>
+		<p><a href="JavaScript.html"> Les Jeux JavaScript </a></p>
 		
 		<h3> Java permet de créer des applications qui sont exécutées sur une machine ou un navigateur virtuel tandis que le code JavaScript est exécuté uniquement sur un navigateur. Le code Java doit être compilé tandis que le code JavaScript est composé entièrement de texte. </h3>
 		
