--- a/Java.html
+++ b/Java.html
@@ -8,7 +8,7 @@
         
 	
 	<body>
-				<p><a href="index.html"> Index </a></P>
+				<p><a class="buttonlienindex" href="index.html"><span>Index</span></a></P>
                 <h1> Le Java </h1>
 				<p class="flotte">
 			<img src="images/image-Java.jpeg" alt="" /> </p>
