--- a/JavaScript.html
+++ b/JavaScript.html
@@ -7,7 +7,7 @@
         
 	
 	<body>
-				<p><a href="index.html"> Index </a></P>
+				<p><a class="buttonlienindex" href="index.html"><span>Index</span></a></P>
                 <h1> Le JavaScript </h1>
 				<p class="flotte">
 			<img src="images/image-JavaScript.png" alt="" /> </p>
